@@ -1,3 +1,9 @@
+2020-10-26  Lili Cui  <lili.cui@intel.com>
+
+	* testsuite/gas/i386/avx-vnni.d: Change psuedo prefix from
+	{vex3} to {vex}
+	* testsuite/gas/i386/x86-64-avx-vnni.d: Likewise.
+
 2020-10-16  Lili Cui  <lili.cui@intel.com>
 
 	* config/tc-i386.c: Move Pseudo Prefix check to match_template.
